Fixed more mobile layout bugs and updated logos

--- a/landing.css
+++ b/landing.css
@@ -107,7 +107,6 @@ img.feature-icon{
 }
 
 #feature-2-container{
-    padding-top: 400px;
     background-color: #E0E2DB;
     height: 1377px;
     align-content: center;
@@ -117,8 +116,8 @@ img.feature-icon{
     margin-top: 200px;
 }
 
-#feature-3-screenshot {
-    margin-top:-200px;
+#feature-3-screenshot{
+    margin-top: 300px;
 }
 
 #feature-3{
@@ -136,5 +135,37 @@ img.feature-icon{
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
-  /* background-color: #f5f5f5; */
+}
+
+/* Mobile layout overrides */
+
+@media (max-width: 960px){
+    #hero-email-form-group{
+        width:100%;
+    }
+
+    #hero-email-form-group > input{
+        width: 100%;
+    }
+
+    #hero-email-form-group > button{
+        width: 100%;
+    }
+
+    #hero-email-form-group{
+        width:100%;
+    }
+}
+
+/* Desktop layout overrides */
+
+@media (min-width: 960px){
+
+    #feature-2-screenshot{
+        padding-top: 400px;
+    }
+
+    #feature-3-screenshot {
+        margin-top:-200px;
+    }
 }
